@@ -1,26 +1,9 @@
 
 
-#################################
-datamanager - easy access to data
-#################################
+#####################################################
+datamanager - easy access to and manipulation of data
+#####################################################
 
 .. automodule:: spacepy.datamanager
-
-.. currentmodule:: spacepy.datamanager
-
-.. rubric:: Classes
-
-.. autosummary::
-    :template: clean_class.rst
-    :toctree: autosummary
-
-    DataManager
-
-.. rubric:: Functions
-
-.. autosummary::
-    :toctree: autosummary
-
-    apply_index
-    insert_fill
+    :members:
 
