@@ -2,8 +2,13 @@ Changes in Version 0.1.6 (2015-xx-xx)
 =====================================
 datamanager
  - New module to help in finding, slicing, and manipulating data
- - Function "insert_fill" to make explict gaps in irregular data
  - Function "apply_index": help sort one multi-dimensional data set by another
+ - Function "array_interleave": combine data from two arrays to make a new
+ - Function "axis_index": prepare indices along the axis of an array
+ - Function "flatten_idx": convert an index to an index into flattened array
+ - Function "insert_fill" to make explict gaps in irregular data
+ - Function "rev_argsort": convert an index into its complement
+ - Function "values_to_steps": convert values to index of unique, sorted values
 datamodel
  - Fix reading JSON-headed ASCII in numpy 1.4, 1.5
 empiricals
